# sealevelbayes

./: .gitattributes  .gitignore  README.md  config.toml  pyproject.toml  requirements-manifest.txt  requirements.txt
.github/workflows/: deploy.yml
notebooks/: .gitignore  figures-global.ipynb  figures-local.ipynb  figures-misc.ipynb  figures-sensitivity.ipynb  figures-validation.ipynb  tidegauge_trends.ipynb  vlm-res.ipynb
pm2025/: datasets.json  run_all_experiments.sh
scripts/: batch_jobs.sh  definitions.sh
scripts/legacy-scripts-for-doc-only/: ar6_obs_web.py  build_obs.py  garnerandkopp_annualmean.py
sealevelbayes/: __init__.py  cache.py  config.py  logs.py  runparams.py  runslr.py  runutils.py
sealevelbayes/datasets/: __init__.py  basins.py  caron2018.py  catalogue.json  catalogue.py  climate.py  cmip5.py  constants.py  frederikse2020.py  garnerkopp2022.py  giss.py  glaciers.py  hammond2021.py  hermans2021.py  isimip.py  manager.py  maptools.py  misc.py  msl.py  naturalearth.py  oceancmip6.py  psmsl.py  rgi.py  satellite.py  shared.py  tidegaugeobs.py
sealevelbayes/models/: compat.py  domain.py  generic.py  glaciermodels.py  globalconstraints.py  globalslr.py  isimip.py  likelihood.py  localslr.py  metadata.py
sealevelbayes/plotting/: glaciers.py
sealevelbayes/postproc/: coastlines.py  colors.py  constraintsfigure.py  correl.py  featured.py  figures.py  figures_local.py  future_figures_maybe.py  gmslfigure.py  oldfigures.py  resamplecoastlines.py  run.py  sensitivityfigs.py  serialize.py  web.py  zenodo.py
sealevelbayes/preproc/: filtering.py  fingerprints.py  fingerprintserror.py  fingerprintserrordiag.py  gmsldatasets.py  linalg.py  (+7 more)
sealeveldata/: datasets.json
(+42 files in other folders)
